--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
+<!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UFT-8">
+    <title>Site professionel de Ayoub Moudrika</title>
+    <link rel="stylesheet" type="text/css" href='style.css' />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+</head>
 <body>
-<p>
-    yo
-</p>
+<div class="w3-bar w3-black">
+    <button class="w3-bar-item w3-button" onclick="openTab('contact')">Contact</button>
+    <button class="w3-bar-item w3-button" onclick="openTab('stages')">Stages</button>
+    <button class="w3-bar-item w3-button" onclick="openTab('formation')">Formation</button>
+    <button class="w3-bar-item w3-button" onclick="openTab('stack')">Stack Technologique</button>
+    <button class="w3-bar-item w3-button" onclick="openTab('cv')">Telecharger CV en PDF</button>
+    <button><</button>
+</div>
+
+<div id="contact" class="tab">
+    <h2>Ayoub Moudrika</h2>
+    <p>514-998-8996</p>
+    <p>amoudrika@gmail.com</p>
+</div>
+
+<div id="stages" class="tab" style="display:none">
+    <p>Gestabec (Jean Fortin Syndics de faillite)</p>
+    <p>Intact Assurances</p>
+    <p>Air Transat</p>
+</div>
+
+<div id="formation" class="tab" style="display:none">
+    <a href="https://www.etsmtl.ca/etudes/premier-cycle/baccalaureat-genie-des-ti">
+        BACCALAUREAT EN GENIE DES TECHNOLOGIES DE L'INFORMATION</a>
+    <p>Moyenne cumulative: 2.95/4.3</p>
+    <p>Credits: 74/116</p>
+</div>
+
+<div id="stack" class="tab" style="display:none">
+    <p>Backend: Java</p>
+    <p>Frontend: Javascript, Typescript</p>
+</div>
+
+
+<div id="cv" class="tab" style="display:none">
+    <a href="cv.pdf" download>
+        <img src="/images/cvLogo.jpq" alt="Ayoub Moudrika CV" width="104" height="142">
+    </a>
+</div>
 </body>
+
+<script src="site.js"></script>
 </html>
