librairie no linked

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio de Ayoub Moudrika</title>
+    <title>Portfolio de Ayoub Moudrikaa</title>
 
     <!-- linking css file -->
     <link rel="stylesheet" type="text/css" href='style.css' />
