--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-<html>
 <head>
     <meta charset="UTF-8">
     <title>Portfolio de Ayoub Moudrikaa</title>
@@ -100,4 +99,5 @@
         </div>
     </div>
 </footer>
+</body>
 </html>
