--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/image3.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Product Landing Page</h4>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
