--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="row">
             <div class="col-lg-4 mt-4">
                 <div class="card">
-                    <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/mtl.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">YouTube Clone</h4>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -199,7 +199,7 @@
 
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/future.webp" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Quiz App</h4>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -227,7 +227,7 @@
         <div class="row">
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/future.webp" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Messaging Service</h4>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -240,7 +240,7 @@
 
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/ayoub.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Twitter Clone</h4>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -253,7 +253,7 @@
 
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/light.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Blog App</h4>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
