--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         </div>
     </div>
 </section>
+
 <!-- stack section-->
 <section class=bgimage3 id="skills">
     <div class="container">
@@ -160,7 +161,7 @@
     </div>
 </section>
 
-<!-- about section-->
+<!-- experience section-->
 <section class= "bgimage4" id="exp">
     <div class="container mt-4 pt-4">
         <div class="row mt-4">
@@ -264,6 +265,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 <script src="site.js"></script>
